src/objects/Perito_Provincia__c.object
<CustomObject>
    <description>Tabla donde se relacionan a los peritos con las provincias asociadas y su porcentaje de asignación</description>
    <fields>
        <fullName>PERP_FOR_Asignacion_Real__c</fullName>
        <formula>if(PERP_NUM_Sini_Provincia_Compania__c=0,0,PERP_NUM_Siniestros_Asignados__c / PERP_NUM_Sini_Provincia_Compania__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asignación Real</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PERP_FOR_Compania__c</fullName>
        <formula>PERP_LKP_Perito__r.PER_LKP_Compania__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERP_FOR_Desvio_Asignacion__c</fullName>
        <formula>PERP_FOR_Asignacion_Real__c - PERP_POR_Porcentaje_Asignacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desvío Asignación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PERP_LKP_Perito__c</fullName>
        <description>Representa la FK al objeto Perito. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el Código del Perito (Perito__c.PER_TXT_Codigo_Perito__c)</description>
        <label>Perito</label>
        <referenceTo>Perito__c</referenceTo>
        <relationshipLabel>Perito: Provincias</relationshipLabel>
        <relationshipName>Perito_Provincias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PERP_NUM_Sini_Provincia_Compania__c</fullName>
        <description>Son todos los siniestros que tiene la compañía asociada al Perito en la provincia en la provincia seleccionada</description>
        <label>Siniestros por provincia y compañía</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PERP_NUM_Siniestros_Asignados__c</fullName>
        <description>Numero de Siniestros Asignados para el perito en la provincia seleccionada</description>
        <label>Siniestros Asignados</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PERP_POR_Porcentaje_Asignacion__c</fullName>
        <description>Porcentaje de asignaciones que puede tener el perito</description>
        <label>Porcentaje de asignación</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PERP_SEL_Provincia__c</fullName>
        <description>Provincia asociada al Perito</description>
        <label>Provincia</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PERP_TXT_Identificador__c</fullName>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Perito: Provincia</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Nombre de Perito: Provincia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perito: Provincias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>